--- a/about.html
+++ b/about.html
@@ -41,42 +41,42 @@
               Beranda
             </li></a
           >
-          <a href=""
+          <a href="#"
             ><li
               class="text-base font-normal text-white transition-all ease-in-out"
             >
               Tentang Kami
             </li></a
           >
-          <a href=""
+          <a href="facility.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Fasilitas
             </li></a
           >
-          <a href=""
+          <a href="eskul.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Ekskul
             </li></a
           >
-          <a href=""
+          <a href="galery.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Galeri
             </li></a
           >
-          <a href=""
+          <a href="info.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Info
             </li></a
           >
-          <a href=""
+          <a href="kontak.html"
             ><li class="text-base font-normal text-slate-300 hover:text-white">
               Kontak
             </li></a
@@ -120,7 +120,7 @@
         </div>
         <ul class="flex flex-col gap-2 text-center">
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="#">Home</a>
+            <a class="text-xs text-[#000000] font-semibold" href="index.html">Home</a>
           </li>
           <li>
             <a class="text-xs text-[#000000] font-semibold" href="about.html"
@@ -128,12 +128,12 @@
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="partner.html"
+            <a class="text-xs text-[#000000] font-semibold" href="facility.html"
               >Fasilitas</a
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="service.html"
+            <a class="text-xs text-[#000000] font-semibold" href="eskul.html"
               >Ekskul</a
             >
           </li>
@@ -148,7 +148,7 @@
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="">Kontak</a>
+            <a class="text-xs text-[#000000] font-semibold" href="kontak.html">Kontak</a>
           </li>
         </ul>
       </div>
@@ -312,7 +312,7 @@
           class="font-bold text-xl md:text-2xl text-black text-center md:pt-16 pt-8"
         >
           SMA IT HSI IDN
-        </h2>       
+        </h2>
       </div>
       <div
         class="px-16 md:px-24 lg:px-16 mx-auto md:flex md:flex-row lg:justify-center lg:items-center md:gap-5"
@@ -469,7 +469,7 @@
     </section>
 
     <section class="w-full">
-      <div class="container mx-auto mt-24 mb-36 p-4 md:p-0">
+      <div class="container mx-auto mt-10 mb-36 p-4 md:p-0">
         <div class="title bg-sky-500">
           <p class="text-white font-bold text-center p-3">Tahun 2024/2025</p>
         </div>
@@ -603,6 +603,236 @@
                 <td class="border-2 py-2 px-4 text-center">8</td>
               </tr>
             </tbody>
+          </table>
+        </div>
+
+        <h2
+          class="text-lg font-semibold md:text-2xl md:font-bold text-black mt-10"
+        >
+          Data Ruang Kelas
+        </h2>
+
+        <div class="overflow-x-scroll md:overscroll-y-none">
+          <table class="table-auto mx-auto w-full mt-5">
+            <tr>
+              <th
+                class="border py-2 px-4 text-center text-white bg-sky-500"
+                rowspan="2"
+              >
+                No.
+              </th>
+              <th
+                class="border py-2 px-4 text-center text-white bg-sky-500"
+                rowspan="2"
+              >
+                Jenis Ruangan
+              </th>
+              <th
+                class="border py-2 px-4 text-center text-white bg-sky-500"
+                rowspan="2"
+              >
+                Jumlah Ruangan
+              </th>
+              <th
+                class="border py-2 px-4 text-center text-white bg-sky-500"
+                rowspan="2"
+              >
+                Jumlah Yang Kondisinya Baik
+              </th>
+              <th
+                class="border py-2 px-4 text-center text-white bg-sky-500"
+                rowspan="2"
+              >
+                Jumlah Yang Kondisinya Rusak
+              </th>
+              <th
+                class="border py-2 px-4 text-center text-white bg-sky-500"
+                colspan="2"
+              >
+                Kategori Kerusakan
+              </th>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center text-white bg-sky-500">
+                Berat
+              </td>
+              <td class="border py-2 px-4 text-center text-white bg-sky-500">
+                Sedang
+              </td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center">Perpustakaan</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center"></td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">2</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">
+                Ruang Komputer
+              </td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">1</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">1</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center">3</td>
+              <td class="border py-2 px-4 text-center">Lab. IPA Fisika</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center">1</td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">4</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">
+                Lab. IPA Biologi
+              </td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">1</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">1</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">1</td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center">5</td>
+              <td class="border py-2 px-4 text-center">Ruang TU</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center"></td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">6</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">
+                Ruang Guru
+              </td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">1</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">1</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center">7</td>
+              <td class="border py-2 px-4 text-center">Ruang Kepala Sekolah</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center"></td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">8</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">
+                Ruang BP
+              </td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">1</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">1</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center">9</td>
+              <td class="border py-2 px-4 text-center">Ruang UKS</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center"></td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">10</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">Masjid</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">1</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">1</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+            </tr>
+          </table>
+        </div>
+
+        <h2
+          class="text-lg font-semibold md:text-2xl md:font-bold text-black mt-10"
+        >
+          Data Tenaga Pendidik dan Kependididkan
+        </h2>
+
+        <div class="overflow-x-scroll md:overflow-y-none">
+          <table class="table-auto mx-auto w-full mt-5">
+            <tr>
+              <th class="border py-2 px-4 text-center text-white bg-sky-500">
+                No.
+              </th>
+              <th class="border py-2 px-4 text-center text-white bg-sky-500">
+                Jumlah Guru/Staff
+              </th>
+              <th class="border py-2 px-4 text-center text-white bg-sky-500">
+                S1
+              </th>
+              <th class="border py-2 px-4 text-center text-white bg-sky-500">
+                S2
+              </th>
+              <th class="border py-2 px-4 text-center text-white bg-sky-500">
+                Yang Sedang Menempuh S-1
+              </th>
+              <th class="border py-2 px-4 text-center text-white bg-sky-500">
+                Keterangan
+              </th>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center">Guru PNS</td>
+              <td class="border py-2 px-4 text-center">23</td>
+              <td class="border py-2 px-4 text-center">28</td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center">1 Orang D-1</td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">2</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">
+                Guru Non PNS
+              </td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">5</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">5</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center">3</td>
+              <td class="border py-2 px-4 text-center">Guru PNS DPK</td>
+              <td class="border py-2 px-4 text-center">2</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center"></td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">4</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">
+                Staff TU PNS
+              </td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]">4</td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+              <td class="border py-2 px-4 text-center bg-[#B9CAFF]"></td>
+            </tr>
+            <tr>
+              <td class="border py-2 px-4 text-center">5</td>
+              <td class="border py-2 px-4 text-center">Staff TU Non PNS</td>
+              <td class="border py-2 px-4 text-center">1</td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center"></td>
+              <td class="border py-2 px-4 text-center"></td>
+            </tr>
           </table>
         </div>
       </div>
