--- a/galery.html
+++ b/galery.html
@@ -48,31 +48,31 @@
               Tentang Kami
             </li></a
           >
-          <a href="#"
+          <a href="facility.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Fasilitas
             </li></a
           >
-          <a href=""
+          <a href="eskul.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Ekskul
             </li></a
           >
-          <a href=""
+          <a href="#"
             ><li class="text-base font-normal text-white">Galeri</li></a
           >
-          <a href=""
+          <a href="info.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Info
             </li></a
           >
-          <a href=""
+          <a href="kontak.html"
             ><li class="text-base font-normal text-slate-300 hover:text-white">
               Kontak
             </li></a
@@ -126,12 +126,12 @@
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="#"
+            <a class="text-xs text-[#000000] font-semibold" href="facility.html"
               >Fasilitas</a
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="service.html"
+            <a class="text-xs text-[#000000] font-semibold" href="eskul.html"
               >Ekskul</a
             >
           </li>
@@ -146,7 +146,7 @@
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="">Kontak</a>
+            <a class="text-xs text-[#000000] font-semibold" href="kontak.html">Kontak</a>
           </li>
         </ul>
       </div>
@@ -157,8 +157,217 @@
         <h2 class="text-black text-2xl font-bold text-center mt-10">
           Gallery Kami
         </h2>
+
+        <div
+          class="container mx-auto mt-10 mb-24 grid grid-cols-2 gap-3 md:px-16 md:grid-cols-3 md:gap-5 lg:px-40"
+        >
+          <div
+            class="aspect-square rounded-lg overflow-hidden group relative hover:scale-95 transition-all ease-in-out duration-500"
+          >
+            <div
+              class="w-full h-full bg-[url('images/one.png')] bg-cover bg-no-repeat bg-center absolute group-hover:scale-125 transition-all ease-in-out duration-500"
+            ></div>
+          </div>
+          <div
+            class="aspect-square rounded-lg overflow-hidden group relative hover:scale-95 transition-all ease-in-out duration-500"
+          >
+            <div
+              class="w-full h-full bg-[url('images/two.png')] bg-cover bg-no-repeat bg-center absolute group-hover:scale-125 transition-all ease-in-out duration-500"
+            ></div>
+          </div>
+          <div
+            class="aspect-square rounded-lg overflow-hidden group relative hover:scale-95 transition-all ease-in-out duration-500"
+          >
+            <div
+              class="w-full h-full bg-[url('images/3.png')] bg-cover bg-no-repeat bg-center absolute group-hover:scale-125 transition-all ease-in-out duration-500"
+            ></div>
+          </div>
+          <div
+            class="aspect-square rounded-lg overflow-hidden group relative hover:scale-95 transition-all ease-in-out duration-500"
+          >
+            <div
+              class="w-full h-full bg-[url('images/4.png')] bg-cover bg-no-repeat bg-center absolute group-hover:scale-125 transition-all ease-in-out duration-500"
+            ></div>
+          </div>
+          <div
+            class="aspect-square rounded-lg overflow-hidden group relative hover:scale-95 transition-all ease-in-out duration-500"
+          >
+            <div
+              class="w-full h-full bg-[url('images/5.png')] bg-cover bg-no-repeat bg-center absolute group-hover:scale-125 transition-all ease-in-out duration-500"
+            ></div>
+          </div>
+          <div
+            class="aspect-square rounded-lg overflow-hidden group relative hover:scale-95 transition-all ease-in-out duration-500"
+          >
+            <div
+              class="w-full h-full bg-[url('images/6.png')] bg-cover bg-no-repeat bg-center absolute group-hover:scale-125 transition-all ease-in-out duration-500"
+            ></div>
+          </div>
+          <div
+            class="aspect-square rounded-lg overflow-hidden group relative hover:scale-95 transition-all ease-in-out duration-500"
+          >
+            <div
+              class="w-full h-full bg-[url('images/7.png')] bg-cover bg-no-repeat bg-center absolute group-hover:scale-125 transition-all ease-in-out duration-500"
+            ></div>
+          </div>
+          <div
+            class="aspect-square rounded-lg overflow-hidden group relative hover:scale-95 transition-all ease-in-out duration-500"
+          >
+            <div
+              class="w-full h-full bg-[url('images/8.png')] bg-cover bg-no-repeat bg-center absolute group-hover:scale-125 transition-all ease-in-out duration-500"
+            ></div>
+          </div>
+          <div
+            class="aspect-square rounded-lg overflow-hidden group relative hover:scale-95 transition-all ease-in-out duration-500"
+          >
+            <div
+              class="w-full h-full bg-[url('images/9.png')] bg-cover bg-no-repeat bg-center absolute group-hover:scale-125 transition-all ease-in-out duration-500"
+            ></div>
+          </div>
+        </div>
       </div>
     </section>
+
+    <footer class="bg-[#F9F9F9]">
+      <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
+        <div class="md:flex md:justify-between">
+          <div class="mb-6 md:mb-0">
+            <div class="flex items-center">
+              <img
+                src="images/logo-idn.png"
+                class="h-8 me-3"
+                alt="FlowBite Logo"
+              />
+              <span
+                class="self-center text-2xl font-semibold whitespace-nowrap text-black"
+                >SMA IT HSI IDN</span
+              >
+            </div>
+          </div>
+
+          <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+            <div>
+              <h2 class="mb-6 text-base font-bold text-black uppercase">
+                Jelajah
+              </h2>
+              <ul class="text-black font-medium">
+                <li class="mb-4">
+                  <p>Sambutan</p>
+                </li>
+                <li class="mb-4">
+                  <p>Profil Sekolah</p>
+                </li>
+                <li class="mb-4">
+                  <p>Berita</p>
+                </li>
+                <li class="mb-4">
+                  <p>Galeri</p>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <h2 class="mb-6 text-base font-bold text-gray-900 uppercase">
+                Halaman Umum
+              </h2>
+              <ul class="text-black font-medium">
+                <li class="mb-4">
+                  <p>Data Guru</p>
+                </li>
+                <li class="mb-4">
+                  <p>PPDB SMA IT HSI IDN</p>
+                </li>
+                <li class="mb-4">
+                  <p>Lokasi</p>
+                </li>
+                <li class="mb-4">
+                  <p>Kontak</p>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <h2 class="mb-6 text-base font-bold text-black uppercase">
+                Legal
+              </h2>
+              <ul class="text-black font-medium">
+                <li class="mb-4">
+                  <a href="#" class="hover:underline">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <hr class="my-6 border-black sm:mx-auto dark:border-gray-700 lg:my-8" />
+        <div class="sm:flex sm:items-center sm:justify-between">
+          <span class="text-sm text-black sm:text-center"
+            >© 2024
+            <a href="https://flowbite.com/" class="hover:underline"
+              >SMA IT HSI IDN</a
+            >
+          </span>
+          <div class="flex mt-4 sm:justify-center sm:mt-0">
+            <a
+              href="https://www.youtube.com/@smaithsiidnpurworejo"
+              target="_blank"
+              class="text-black hover:text-gray-900 ms-5"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="22"
+                height="22"
+                fill="#000000"
+                viewBox="0 0 256 256"
+              >
+                <path
+                  d="M164.44,121.34l-48-32A8,8,0,0,0,104,96v64a8,8,0,0,0,12.44,6.66l48-32a8,8,0,0,0,0-13.32ZM120,145.05V111l25.58,17ZM234.33,69.52a24,24,0,0,0-14.49-16.4C185.56,39.88,131,40,128,40s-57.56-.12-91.84,13.12a24,24,0,0,0-14.49,16.4C19.08,79.5,16,97.74,16,128s3.08,48.5,5.67,58.48a24,24,0,0,0,14.49,16.41C69,215.56,120.4,216,127.34,216h1.32c6.94,0,58.37-.44,91.18-13.11a24,24,0,0,0,14.49-16.41c2.59-10,5.67-28.22,5.67-58.48S236.92,79.5,234.33,69.52Zm-15.49,113a8,8,0,0,1-4.77,5.49c-31.65,12.22-85.48,12-86,12H128c-.54,0-54.33.2-86-12a8,8,0,0,1-4.77-5.49C34.8,173.39,32,156.57,32,128s2.8-45.39,5.16-54.47A8,8,0,0,1,41.93,68c30.52-11.79,81.66-12,85.85-12h.27c.54,0,54.38-.18,86,12a8,8,0,0,1,4.77,5.49C221.2,82.61,224,99.43,224,128S221.2,173.39,218.84,182.47Z"
+                ></path>
+              </svg>
+              <span class="sr-only">YouTube page</span>
+            </a>
+            <a
+              href="https://www.instagram.com/smaithsiidn/"
+              target="_blank"
+              class="text-black hover:text-gray-900 ms-5"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="22"
+                height="22"
+                fill="#000000"
+                viewBox="0 0 256 256"
+              >
+                <path
+                  d="M128,80a48,48,0,1,0,48,48A48.05,48.05,0,0,0,128,80Zm0,80a32,32,0,1,1,32-32A32,32,0,0,1,128,160ZM176,24H80A56.06,56.06,0,0,0,24,80v96a56.06,56.06,0,0,0,56,56h96a56.06,56.06,0,0,0,56-56V80A56.06,56.06,0,0,0,176,24Zm40,152a40,40,0,0,1-40,40H80a40,40,0,0,1-40-40V80A40,40,0,0,1,80,40h96a40,40,0,0,1,40,40ZM192,76a12,12,0,1,1-12-12A12,12,0,0,1,192,76Z"
+                ></path>
+              </svg>
+              <span class="sr-only">Instagram account</span>
+            </a>
+            <a
+              href="https://www.facebook.com/sma.ti.hsi.idn"
+              target="_blank"
+              class="text-black hover:text-gray-900 ms-5"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="22"
+                height="22"
+                fill="#000000"
+                viewBox="0 0 256 256"
+              >
+                <path
+                  d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm8,191.63V152h24a8,8,0,0,0,0-16H136V112a16,16,0,0,1,16-16h16a8,8,0,0,0,0-16H152a32,32,0,0,0-32,32v24H96a8,8,0,0,0,0,16h24v63.63a88,88,0,1,1,16,0Z"
+                ></path>
+              </svg>
+              <span class="sr-only">Facebook account</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script>
       const sidebar = document.querySelector("aside");
