--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           />
         </div>
         <ul class="hidden md:flex justify-center items-center gap-5">
-          <a href=""
+          <a href="#"
             ><li class="text-base font-normal text-white">Beranda</li></a
           >
           <a href="about.html"
@@ -44,35 +44,35 @@
               Tentang Kami
             </li></a
           >
-          <a href=""
+          <a href="facility.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Fasilitas
             </li></a
           >
-          <a href=""
+          <a href="eskul.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Ekskul
             </li></a
           >
-          <a href=""
+          <a href="galery.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Galeri
             </li></a
           >
-          <a href=""
+          <a href="info.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Info
             </li></a
           >
-          <a href=""
+          <a href="kontak.html"
             ><li class="text-base font-normal text-slate-300 hover:text-white">
               Kontak
             </li></a
@@ -124,12 +124,12 @@
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="partner.html"
+            <a class="text-xs text-[#000000] font-semibold" href="facility.html"
               >Fasilitas</a
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="service.html"
+            <a class="text-xs text-[#000000] font-semibold" href="eskul.html"
               >Ekskul</a
             >
           </li>
@@ -144,7 +144,9 @@
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="">Kontak</a>
+            <a class="text-xs text-[#000000] font-semibold" href="kontak.html"
+              >Kontak</a
+            >
           </li>
         </ul>
       </div>
