--- a/info.html
+++ b/info.html
@@ -50,28 +50,24 @@
           >
           <a href="facility.html"
             ><li
-              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-ou"
+              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
               Fasilitas
             </li></a
           >
-          <a href="#"
-            ><li class="text-base font-normal text-white">Ekskul</li></a
-          >
-          <a href="galery.html"
+          <a href="eskul.html"
             ><li
               class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
             >
+              Ekskul
+            </li></a
+          >
+          <a href="galery.html"
+            ><li class="text-base font-normal text-slate-300 hover:text-white">
               Galeri
             </li></a
           >
-          <a href="info.html"
-            ><li
-              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
-            >
-              Info
-            </li></a
-          >
+          <a href="#"><li class="text-base font-normal text-white">Info</li></a>
           <a href="kontak.html"
             ><li class="text-base font-normal text-slate-300 hover:text-white">
               Kontak
@@ -131,7 +127,9 @@
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="#">Ekskul</a>
+            <a class="text-xs text-[#000000] font-semibold" href="eskul.html"
+              >Ekskul</a
+            >
           </li>
           <li>
             <a class="text-xs text-[#000000] font-semibold" href="galery.html"
@@ -144,283 +142,63 @@
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="kontak.html"
-              >Kontak</a
-            >
+            <a class="text-xs text-[#000000] font-semibold" href="kontak.html">Kontak</a>
           </li>
         </ul>
       </div>
     </aside>
 
-    <section class="w-full bg-[url('images/bg.png')] h-44 md:h-64">
+    <section class="w-full bg-[url('images/bg.png')] h-64 md:h-80">
       <div class="title flex flex-col justify-center items-center">
-        <h2 class="font-bold text-lg md:text-2xl text-white pt-12 md:pt-20">
-          Extra Kurikuler SMA IT HSI IDN
+        <h2 class="font-bold text-sm md:text-2xl text-white pt-14 md:pt-20">
+          Selamat datang calon peserta didik baru
         </h2>
-        <p
-          class="font-thin text-white text-opacity-70 text-xs md:text-base mt-2"
+        <h2 class="font-bold text-sm md:text-2xl text-white">SMA IT HSI IDN</h2>
+        <h2 class="font-bold text-sm md:text-2xl text-white">
+          Tahun Pelajaran 2024/2025
+        </h2>
+
+        <button
+          class="bg-sky-500 hover:bg-sky-600 active:bg-sky-700 transition-all ease-in-out text-white text-xs md:text-base font-bold px-3 md:px-4 py-2 rounded-md mt-4 md:mt-6"
         >
-          Beberapa Ekstra Kurikuler Yang Tersedia Di SMA IT HSI IDN
-        </p>
+          Daftar Sekarang
+        </button>
       </div>
     </section>
 
-    <section class="w-full px-10 mx-auto lg:px-16">
-      <div class="md:flex md:flex-wrap md:gap-5 lg:gap-8 md:my-20">
-        <div class="card-1 md:w-[350px] lg:w-96 mt-10 md:mt-5 overflow-hidden">
-          <div
-            class="bg-[url('images/basket.png')] bg-cover bg-no-repeat rounded-lg relative h-60 w-full"
-          >
-            <div
-              class="bg-black bg-opacity-50 rounded-full px-3 py-1 absolute top-7 left-7 w-fit font-bold text-white"
-            >
-              1
-            </div>
+    <section class="informasi">
+      <div
+        class="container mx-auto flex justify-center items-center mt-10 mb-24"
+      >
+        <div class="info w-64 md:w-full md:px-20 lg:px-32">
+          <div class="bg-sky-500 rounded-md border">
             <p
-              class="absolute text-white font-semibold text-2xl bottom-2 left-5"
+              class="font-bold text-white text-base md:text-lg p-2 md:p-3 text-center"
             >
-              Basket
+              Informasi
             </p>
           </div>
-          <div class="bg-white">
-            <p class="px-3 mt-5">
-              <span class="font-bold">Pembimbing</span> : Michael Jordan
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">No. Hp</span> : 0865429018
-            </p>
-            <p class="px-3 mt-2"><span class="font-bold">Hari</span> : Sabtu</p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">Waktu</span> : 15.00 - 17.00
-            </p>
-          </div>
-        </div>
-        <div class="card-2 md:w-[350px] lg:w-96 mt-10 md:mt-7 overflow-hidden">
-          <div
-            class="bg-[url('images/futsal.png')] bg-cover bg-no-repeat rounded-lg relative h-60 w-full"
-          >
-            <div
-              class="bg-black bg-opacity-50 rounded-full px-3 py-1 absolute top-7 left-7 w-fit font-bold text-white"
-            >
-              2
-            </div>
+          <div class="p-5 md:p-7 border rounded-md">
             <p
-              class="absolute text-white font-semibold text-2xl bottom-2 left-5"
+              class="text-sm md:text-lg text-[#3A4E50] font-normal text-center"
             >
-              Futsal
+              Sebagai informasi, Pendaftaran untuk periode 2024-2025 untuk jalur
+              Afirmasi, Perpindahan Orangtua/Wali, dan Prestasi akan dibuka pada
+              tanggal 28 Juni s.d 2 Juli 2023, sedangkan untuk jalur Zonasi akan
+              dibuka pada tanggal 5 Juli – 9 Juli 2023
             </p>
-          </div>
-          <div class="bg-white">
-            <p class="px-3 mt-5">
-              <span class="font-bold">Pembimbing</span> : Evan Soumilena
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">No. Hp</span> : 0876542891
-            </p>
-            <p class="px-3 mt-2"><span class="font-bold">Hari</span> : Ahad</p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">Waktu</span> : 7.00 - 10.00
-            </p>
-          </div>
-        </div>
-        <div class="card-3 md:w-[350px] lg:w-96 mt-10 md:mt-5 overflow-hidden">
-          <div
-            class="bg-[url('images/osis.png')] bg-cover bg-no-repeat rounded-lg relative h-60 w-full"
-          >
-            <div
-              class="bg-black bg-opacity-50 rounded-full px-3 py-1 absolute top-7 left-7 w-fit font-bold text-white"
-            >
-              3
-            </div>
+            <br />
             <p
-              class="absolute text-white font-semibold text-2xl bottom-2 left-5"
+              class="text-sm md:text-lg text-[#3A4E50] font-normal text-center"
             >
-              Osis
+              Simulasi pendaftaran sudah dibuka, namun diluar tanggal yang
+              disebutkan diatas, akan dihapus kembali Terima Kasih
             </p>
-          </div>
-          <div class="bg-white">
-            <p class="px-3 mt-5">
-              <span class="font-bold">Pembimbing</span> : Azman Muzakki
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">No. Hp</span> : 086253847624
-            </p>
-            <p class="px-3 mt-2"><span class="font-bold">Hari</span> : Senin</p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">Waktu</span> : 15.00 - 17.00
-            </p>
-          </div>
-        </div>
-
-        <div class="card-4 md:w-[350px] lg:w-96 mt-10 md:mt-5 overflow-hidden">
-          <div
-            class="bg-[url('images/voli.png')] bg-cover bg-no-repeat rounded-lg relative h-60 w-full"
-          >
-            <div
-              class="bg-black bg-opacity-50 rounded-full px-3 py-1 absolute top-7 left-7 w-fit font-bold text-white"
-            >
-              4
-            </div>
+            <br />
             <p
-              class="absolute text-white font-semibold text-2xl bottom-2 left-5"
+              class="text-sm md:text-lg text-[#3A4E50] font-normal text-center"
             >
-              Voli
-            </p>
-          </div>
-          <div class="bg-white">
-            <p class="px-3 mt-5">
-              <span class="font-bold">Pembimbing</span> : Hinata Shoyo
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">No. Hp</span> : 087241728362
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">Hari</span> : Selasa
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">Waktu</span> : 15.00 - 17.00
-            </p>
-          </div>
-        </div>
-        <div class="card-5 md:w-[350px] lg:w-96 mt-10 md:mt-5 overflow-hidden">
-          <div
-            class="bg-[url('images/pramuka.png')] bg-cover bg-no-repeat rounded-lg relative h-60 w-full"
-          >
-            <div
-              class="bg-black bg-opacity-50 rounded-full px-3 py-1 absolute top-7 left-7 w-fit font-bold text-white"
-            >
-              5
-            </div>
-            <p
-              class="absolute text-white font-semibold text-2xl bottom-2 left-5"
-            >
-              Pramuka
-            </p>
-          </div>
-          <div class="bg-white">
-            <p class="px-3 mt-5">
-              <span class="font-bold">Pembimbing</span> : Kak Dwi
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">No. Hp</span> : 087241728362
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">Hari</span> : Selasa
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">Waktu</span> : 15.00 - 17.00
-            </p>
-          </div>
-        </div>
-        <div class="card-6 md:w-[350px] lg:w-96 mt-10 md:mt-5 overflow-hidden">
-          <div
-            class="bg-[url('images/panahan.png')] bg-cover bg-no-repeat rounded-lg relative h-60 w-full"
-          >
-            <div
-              class="bg-black bg-opacity-50 rounded-full px-3 py-1 absolute top-7 left-7 w-fit font-bold text-white"
-            >
-              6
-            </div>
-            <p
-              class="absolute text-white font-semibold text-2xl bottom-2 left-5"
-            >
-              Panahan
-            </p>
-          </div>
-          <div class="bg-white">
-            <p class="px-3 mt-5">
-              <span class="font-bold">Pembimbing</span> : Clint Barton
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">No. Hp</span> : 0872517283
-            </p>
-            <p class="px-3 mt-2"><span class="font-bold">Hari</span> : Kamis</p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">Waktu</span> : 15.00 - 17.00
-            </p>
-          </div>
-        </div>
-        <div class="card-7 md:w-[350px] lg:w-96 mt-10 md:mt-5 overflow-hidden">
-          <div
-            class="bg-[url('images/paskibra.png')] bg-cover bg-no-repeat rounded-lg relative h-60 w-full"
-          >
-            <div
-              class="bg-black bg-opacity-50 rounded-full px-3 py-1 absolute top-7 left-7 w-fit font-bold text-white"
-            >
-              7
-            </div>
-            <p
-              class="absolute text-white font-semibold text-2xl bottom-2 left-5"
-            >
-              Paskibra
-            </p>
-          </div>
-          <div class="bg-white">
-            <p class="px-3 mt-5">
-              <span class="font-bold">Pembimbing</span> : Abdul Wahab
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">No. Hp</span> : 0817264172
-            </p>
-            <p class="px-3 mt-2"><span class="font-bold">Hari</span> : Jumat</p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">Waktu</span> : 15.00 - 17.00
-            </p>
-          </div>
-        </div>
-        <div class="card-8 md:w-[350px] lg:w-96 mt-10 md:mt-5 overflow-hidden">
-          <div
-            class="bg-[url('images/berenang.png')] bg-cover bg-no-repeat rounded-lg relative h-60 w-full"
-          >
-            <div
-              class="bg-black bg-opacity-50 rounded-full px-3 py-1 absolute top-7 left-7 w-fit font-bold text-white"
-            >
-              8
-            </div>
-            <p
-              class="absolute text-white font-semibold text-2xl bottom-2 left-5"
-            >
-              Renang
-            </p>
-          </div>
-          <div class="bg-white">
-            <p class="px-3 mt-5">
-              <span class="font-bold">Pembimbing</span> : Ariel
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">No. Hp</span> : 08265518621
-            </p>
-            <p class="px-3 mt-2"><span class="font-bold">Hari</span> : Jumat</p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">Waktu</span> : 15.00 - 17.00
-            </p>
-          </div>
-        </div>
-        <div class="card-9 md:w-[350px] lg:w-96 mt-10 md:mt-5 overflow-hidden">
-          <div
-            class="bg-[url('images/hidroponik.png')] bg-cover bg-no-repeat rounded-lg relative h-60 w-full"
-          >
-            <div
-              class="bg-black bg-opacity-50 rounded-full px-3 py-1 absolute top-7 left-7 w-fit font-bold text-white"
-            >
-              9
-            </div>
-            <p
-              class="absolute text-white font-semibold text-2xl bottom-2 left-5"
-            >
-              Hidroponik
-            </p>
-          </div>
-          <div class="bg-white">
-            <p class="px-3 mt-5">
-              <span class="font-bold">Pembimbing</span> : Bambang Santoso
-            </p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">No. Hp</span> : 0812374562891
-            </p>
-            <p class="px-3 mt-2"><span class="font-bold">Hari</span> : Sabtu</p>
-            <p class="px-3 mt-2">
-              <span class="font-bold">Waktu</span> : 07.00 - 10.00
+              Admin PPDB SMA IT HSI IDN
             </p>
           </div>
         </div>
@@ -581,6 +359,5 @@
         sidebar.classList.add("translate-x-full");
       }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
   </body>
 </html>
