--- a/kontak.html
+++ b/kontak.html
@@ -48,8 +48,12 @@
               Tentang Kami
             </li></a
           >
-          <a href="#"
-            ><li class="text-base font-normal text-white">Fasilitas</li></a
+          <a href="facility.html"
+            ><li
+              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
+            >
+              Fasilitas
+            </li></a
           >
           <a href="eskul.html"
             ><li
@@ -59,23 +63,17 @@
             </li></a
           >
           <a href="galery.html"
-            ><li
-              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
-            >
+            ><li class="text-base font-normal text-slate-300 hover:text-white">
               Galeri
             </li></a
           >
           <a href="info.html"
-            ><li
-              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
-            >
+            ><li class="text-base font-normal text-slate-300 hover:text-white">
               Info
             </li></a
           >
-          <a href="kontak.html"
-            ><li class="text-base font-normal text-slate-300 hover:text-white">
-              Kontak
-            </li></a
+          <a href="#"
+            ><li class="text-base font-normal text-white">Kontak</li></a
           >
         </ul>
         <button
@@ -146,116 +144,84 @@
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="kontak.html">Kontak</a>
+            <a class="text-xs text-[#000000] font-semibold" href="#">Kontak</a>
           </li>
         </ul>
       </div>
     </aside>
 
-    <section class="w-full bg-[url('images/bg.png')] h-44 md:h-64">
+    <section class="w-full bg-[url('images/bg.png')] h-40 md:h-60">
       <div class="title flex flex-col justify-center items-center">
-        <h2 class="font-bold text-lg md:text-2xl text-white pt-12 md:pt-20">
-          Fasilitas SMA IT HSI-IDN
+        <h2 class="font-bold text-sm md:text-2xl text-white pt-14 md:pt-20">
+          Kontak Kami
         </h2>
-        <p
-          class="font-thin text-white text-opacity-70 text-xs md:text-base mt-2"
-        >
-          Terdapat Beberapa Fasilitas Di SMA IT HSI-IDN
+        <p class="text-[#DFDFDF] font-thin text-xs md:text-sm mt-2 md:mt-3">
+          Jika memiliki pertanyaan bisa langsung ditanyakan
         </p>
       </div>
     </section>
 
-    <section>
-      <div class="mx-auto px-10 md:px-16 lg: rounded-xl">
-        <div class="container md:flex md:flex-wrap md:gap-5 lg:gap-8 md:mt-10">
-          <div class="card-1 md:w-80 lg:w-96 mt-10 md:mt-5 overflow-hidden">
-            <div
-              class="bg-[url('images/cctv.png')] bg-cover bg-no-repeat rounded-lg relative h-60 w-full"
-            >
-              <div
-                class="w-full bg-sky-500 bg-opacity-70 text-white font-bold text-lg py-2 text-center absolute bottom-0 rounded-lg"
-              >
-                CCTV
-              </div>
-            </div>
-            <p class="text-sm text-[#919FAE] font-normal p-1 mt-1">
-              Sekolah ini dilengkapi dengan CCTV sehingga para santri selalu
-              terpantau siang dan malam
-            </p>
-          </div>
-          <div class="card-2 md:w-80 lg:w-96 mt-5 overflow-hidden">
-            <div
-              class="bg-[url('images/labkomputer.png')] bg-cover rounded-lg relative h-60 w-full"
-            >
-              <div
-                class="w-full bg-sky-500 bg-opacity-70 text-white font-bold text-lg py-2 text-center absolute bottom-0 rounded-lg"
-              >
-                Lab Komputer
-              </div>
-            </div>
-            <p class="text-sm text-[#919FAE] font-normal p-1 mt-1">
-              Terdapat lab komputer yang dapat digunakan santri untuk belajar
-            </p>
-          </div>
-          <div class="card-3 md:w-80 lg:w-96 mt-5 overflow-hidden">
-            <div
-              class="bg-[url('images/wifi.png')] bg-cover rounded-lg relative h-60 w-full"
-            >
-              <div
-                class="w-full bg-sky-500 bg-opacity-70 text-white font-bold text-lg py-2 text-center absolute bottom-0 rounded-lg"
-              >
-                WiFi
-              </div>
-            </div>
-            <p class="text-sm text-[#919FAE] font-normal p-1 mt-1">
-              Dan tentu saja disediakan wifi agar bisa online dan belajar
-            </p>
-          </div>
-          <div class="card-4 md:w-80 lg:w-96 mt-5 overflow-hidden">
-            <div
-              class="bg-[url('images/futsal.png')] bg-cover rounded-lg relative h-60 w-full"
-            >
-              <div
-                class="w-full bg-sky-500 bg-opacity-70 text-white font-bold text-lg py-2 text-center absolute bottom-0 rounded-lg"
-              >
-                Lapangan Futsal
-              </div>
-            </div>
-            <p class="text-sm text-[#919FAE] font-normal p-1 mt-1">
-              Terdapat juga lapangan futsal untuk bermain futsal bersama sama
-            </p>
-          </div>
-          <div class="card-5 md:w-80 lg:w-96 mt-5 overflow-hidden">
-            <div
-              class="bg-[url('images/mejatenis.png')] bg-cover rounded-lg relative h-60 w-full"
-            >
-              <div
-                class="w-full bg-sky-500 bg-opacity-70 text-white font-bold text-lg py-2 text-center absolute bottom-0 rounded-lg"
-              >
-                Tenis Meja
-              </div>
-            </div>
-            <p class="text-sm text-[#919FAE] font-normal p-1 mt-1">
-              Dan juga ada meja tenis atau pingpong yang dapat dimainkan bersama
-              teman ketika gabut
-            </p>
-          </div>
-          <div class="card-6 md:w-80 lg:w-96 mt-5 overflow-hidden">
-            <div
-              class="bg-[url('images/balealjannah.png')] bg-cover rounded-lg relative h-60 w-full"
-            >
-              <div
-                class="w-full bg-sky-500 bg-opacity-70 text-white font-bold text-lg py-2 text-center absolute bottom-0 rounded-lg"
-              >
-                Mini Zoo
-              </div>
-            </div>
-            <p class="text-sm text-[#919FAE] font-normal p-1 mt-1 mb-10">
-              Di sekolah ini terdapat minizoo yang ada banyak hewan didalamnya,
-              cocok untuk refreshing dikala kepala pusing
-            </p>
-          </div>
+    <section class="form">
+      <div
+        class="container mx-auto px-5 md:px-20 mt-10 grid gap-3 md:grid-cols-2"
+      >
+        <div class="bg-transparent">
+          <p class="text-[#75818A] text-base font-normal">Name</p>
+          <form action="">
+            <input
+              type="text"
+              class="rounded w-full bg-[#F6F7F9] mt-2 border-none"
+            />
+          </form>
         </div>
+        <div class="bg-transparent">
+          <p class="text-[#75818A] text-base font-normal">Email</p>
+          <form action="">
+            <input
+              type="email"
+              class="rounded w-full bg-[#F6F7F9] mt-2 border-none"
+              placeholder="emailkamu@gmail.com"
+            />
+          </form>
+        </div>
+        <div class="bg-transparent md:col-span-2">
+          <p class="text-[#75818A] text-base font-normal">No. Telp</p>
+          <form action="">
+            <input
+              type="number"
+              class="rounded w-full bg-[#F6F7F9] mt-2 border-none"
+              placeholder="+62"
+            />
+          </form>
+        </div>
+        <div class="bg-transparent md:col-span-2">
+          <p class="text-[#75818A] text-base font-normal">Isi Pesan</p>
+          <form action="">
+            <input
+              type="text"
+              class="rounded w-full bg-[#F6F7F9] mt-2 border-none text-xl"
+              placeholder="Pesan Kamu"
+            />
+          </form>
+        </div>
+      </div>
+
+      <button
+        class="mx-auto flex justify-center items-center bg-sky-500 hover:bg-sky-600 active:bg-sky-700 rounded-md px-14 py-2 text-white font-bold mb-12 mt-10"
+      >
+        Kirim
+      </button>
+
+      <div class="container mx-auto mb-24 px-4 md:px-20">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.3476421628634!2d106.78338971744382!3d-6.968251599999991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e683b000c4881ed%3A0x9ef5171ba317c4ad!2sSMA%20IT%20HSI%20IDN!5e0!3m2!1sen!2sid!4v1725702836620!5m2!1sen!2sid"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          class="w-full"
+        ></iframe>
       </div>
     </section>
 
@@ -413,6 +379,5 @@
         sidebar.classList.add("translate-x-full");
       }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
   </body>
 </html>
